--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                     <i class="fas fa-envelope fa-3x"></i>
                     <h3>Email Address</h3>
                     <p>
-                        chadrackngirimana@gmail.com
+                        ngirimanaschadrack@yahoo.fr
                     </p>
                 </div>    
          </div>
